--- a/leapforce-case/src/components/css/CTA-card.css
+++ b/leapforce-case/src/components/css/CTA-card.css
@@ -1,43 +1,53 @@
 .image-cta {
     position: relative;
-    display: flex;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 4px;
-    overflow: hidden;
-    height: 515px;
+    position: relative;
     width: 644px;
+    height: 515px;
+    overflow: hidden;
+    border-radius: 4px;
+    font-family: "TT Commons Pro";
+
 }
 
 .image-cta .image {
+    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    position: relative;
+    top: 0;
+    left: 0;
     z-index: 0;
 }
-.image-cta .box {
+
+.image-cta .caption {
     position: absolute;
-    bottom: 0;
+
+    color: white;
+    font-size: 15px;
+    opacity: 0.5;
     z-index: 2;
-    height: 258px;
-    width: 100%;
+    margin: 0;
+
+    width: 400px;
+    height: 16px;
+    font-weight: 450;
+
+    display: none;
 }
+
 .image-cta .gradient {
-    background: linear-gradient(0deg, rgba(20, 20, 20, 1) 0%, rgba(20, 20, 20, 0) 100%);
     position: absolute;
     bottom: 0;
-    left: 0; 
     width: 100%;
     height: 50%;
-    pointer-events: none;
+    background: linear-gradient(0deg, #141414 0%, rgba(20, 20, 20, 0.0) 100%);
+    opacity: 0.8;
     z-index: 1;
-    opacity: 80%; /*  Figma geeft dit aan  */
 }
 
 .image-cta .frame {
     position: absolute;
-    bottom: 24px;
+    bottom: 32px;
     left: 24px;
     right: 24px;
     display: flex;
