--- a/leapforce-case/src/components/css/TitlePlainText.css
+++ b/leapforce-case/src/components/css/TitlePlainText.css
@@ -1,38 +1,40 @@
 .title-plaintext {
-    align-items: flex-start;
     display: flex;
-    flex-direction: column;
-    gap: 8px;
-    position: relative;
     width: 508px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    flex-shrink: 0;
 }
 
 .title-plaintext .text-wrapper {
     align-self: stretch;
-    color: #ffffff;
-    font-family: "TT Commons Pro", Helvetica;
+    color: #FFF;
+
+    /* Desktop/Heading 4 */
+    font-family: "TT Commons Pro";
     font-size: 28px;
     font-style: normal;
-    font-weight: 700;
-    letter-spacing: -0.56px;
+    font-weight: 600;
     line-height: 32px;
-    margin-top: -1.00px;
-    position: relative;
-    margin: 0 !important;
-    padding: 0 !important;
+    /* 114.286% */
+    letter-spacing: -0.56px;
 }
 
 .title-plaintext .plain-text {
     align-self: stretch;
-    color: rgba(250, 250, 250, 1);
-    font-family: "TT Commons Pro", Helvetica;
+    color: #FAFAFA;
+
+    /* Desktop/Body - Normal */
+    font-family: "TT Commons Pro";
     font-size: 19px;
     font-style: normal;
-    font-weight: 400;
-    letter-spacing: 0px;
+    font-weight: 450;
     line-height: 24px;
+    /* 126.316% */
+
     opacity: 0.5;
-    position: relative;
-    margin: 0 !important;
-    padding: 0 !important;
+    
+
+    
 }
