--- a/leapforce-case/src/index.css
+++ b/leapforce-case/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'TT Commons Pro';
-  src: url('../fonts/TTCommonsPro-Regular.otf') format('opentype');
+  src: url('./fonts/TTCommonsPro-Normal.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
