--- a/leapforce-case/src/components/css/TitlePlainText.css
+++ b/leapforce-case/src/components/css/TitlePlainText.css
@@ -18,7 +18,7 @@
     font-weight: 600;
     line-height: 32px;
     /* 114.286% */
-    letter-spacing: -0.56px;
+    letter-spacing: -0.56px; /* Ookal ziet het er anders uit ik hou me aan het design */
 }
 
 .title-plaintext .plain-text {
