--- a/leapforce-case/src/index.css
+++ b/leapforce-case/src/index.css
@@ -1,7 +1,9 @@
 @font-face {
   font-family: 'TT Commons Pro';
-  src: url('./fonts/TTCommonsPro-Normal.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
+  src: url('./fonts/TT-Commons-Pro-Normal.woff2') format('woff2');
 }
+@font-face {
+  font-family: 'GT Alpina';
+  src: url('./fonts/GTAlpina-Light.woff2') format('woff2');
+}
+
