--- a/leapforce-case/src/App.css
+++ b/leapforce-case/src/App.css
@@ -9,9 +9,9 @@
 
 html, body {
   height: 100%;
-  font-family: "TT Commons Pro", sans-serif;
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
+  width: 100%;
+  overflow-x: hidden;
+  -webkit-text-size-adjust: 100%;
 }
 
 img, picture, video, canvas, svg {
